# HYBA

./: .dockerignore  .env.docker  .env.example  .env.local  .env.mining.local  .env.mining.local.example  .env.production  .env.production.example  .env.production.test  .eslintrc.json  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  00_START_HERE_NEXT_STEPS.md  100_PERCENT_PRODUCTION_READY.md  10_OUT_OF_10_COMPLETE.md  ADVERSARIAL_DEFENSE_AND_OPERATIONAL_GAPS_SUMMARY.md  ADVERSARIAL_TESTING_REPORT.md  AGENTIC_INTELLIGENCE_IMPLEMENTATION_SUMMARY.md  AGENTIC_MINING_INTEGRATION_ANALYSIS.md  AI_MEMORY_SYSTEM_SUMMARY.md  ALL_GAPS_CLOSED_SUMMARY.md  ARCHITECTURE.md  AUDIT_SUMMARY.md  AUTONOMOUS_GAP_CLOSURE_COMPLETE.txt  BENCHMARK_ENHANCEMENT_COMPLETION.md  BENEFIT_CHAIN_VALIDATION_REPORT.md  BILLING_ROLLBACK_QUICK_REFERENCE.md  BILLING_ROLLBACK_SUMMARY.md  BUSINESS_STRATEGY.md  C3_SELF_STATE_CALIBRATION_EXPERIMENT.md  C4_COUNTERFACTUAL_SELF_CRITICISM_EXPERIMENT.md  C5_INTEGRATED_GOVERNANCE_UNDER_DOCTRINE_CONFLICT.md  CHANGELOG.md  CI_FIXES_APPLIED.md  (+251 more)
.git-rewrite/: commit  (+6 more)
python_backend/: DISTRIBUTED_LOCK_MANAGER_GUIDE.md  QUICKSTART_LOCK_MANAGER.md  debug_api_endpoints.py  debug_backend.py  debug_pulvini_analysis.py  enhanced_ultimate_pulvini_quantum.py  mine_single_block.py  mining_pools_config.json  numpy.py  pyproject.toml  pythia_state.json  pythia_state.live_cut.json  requirements-dev.txt  requirements.frozen.txt  requirements.phase-transition.txt  requirements.test.txt  requirements.txt  run_unified_miner.py  test_pool_auth.py
python_backend/artifacts/autonomous_mining/: reflexive_state.json.sha256
python_backend/artifacts/mining_sessions/: session_20260620_130042.json
python_backend/artifacts/yang_mills/: spectral_gap_measurement.json
python_backend/consciousness_db/: __init__.py  models.py  schema.sql
python_backend/core/: database_error_handling.py  error_handling.py  error_monitoring.py  external_api_error_handling.py
python_backend/core/attribution/: causal_router.py
python_backend/core/audit/: universal_passport.py
python_backend/core/integration/: pythia_adapters.py
python_backend/core/meta_controller/: memory_router.py
python_backend/core/search/: unified_search_kernel.py
python_backend/data/: metrics.db
python_backend/demo_data/: __init__.py  data_acquisition.py  demo_execution.py  post_quantum_processing.py
python_backend/hyba_ciaas/: __init__.py  ingestion.py  sovereign_runtime.py
python_backend/hyba_ciaas/connectors/: __init__.py  base_connector.py  http_connector.py  kafka_connector.py  protein_connector.py  pubchem_connector.py  scada_connector.py  sql_connector.py
python_backend/hyba_genesis_api/: __init__.py  compat.py  database.py  main.py  nicehash.py  redis_registry.py  requirements.txt
python_backend/hyba_genesis_api/analytics/: __init__.py  revenue_engine.py
python_backend/hyba_genesis_api/api/: admin.py  agentic_intelligence_service.py  ai.py  ai_memory.py  auth.py  billing_integration.py  billing_rollback.py  cognitive_schema.py  computational_intelligence_service.py  customer_access.py  customer_portal.py  execution_coordinator.py  executive_router.py  executive_schema.py  health.py  immune_schema.py  intelligence.py  metabolic_router.py  millennium_mathematics.py  mining.py  mining_jobs.py  mining_ops.py  mining_production.py  misc.py  observability.py  ops.py  organism_router.py  pool_management.py  products.py  proofs.py  public_computational_intelligence_service.py  public_quantum_as_a_service.py  quantum_as_a_service.py  quantum_as_a_service_execute_hardened.py  quantum_finance_service.py  quantum_intelligence_service.py  quantum_mathematical_execution.py  quota_manager.py  regeneration_router.py  regeneration_schema.py  (+9 more)
python_backend/hyba_genesis_api/auth/: jwt_handler.py  role_manager.py
python_backend/migrations/: __init__.py  env.py
python_backend/pythia_agents/: __init__.py  pythia_agent_orchestrator.py
python_backend/pythia_finance_audit/: __init__.py  advanced_capability_map.py  criticism_ledger.py  difc_aaiofi_bridge.py  difc_aaoifi_bridge.py  sukuk_lifecycle_simulation.py
python_backend/pythia_mining/: IDEMPOTENCY_IMPLEMENTATION_GUIDE.md  STRATUM_IDEMPOTENCY_README.md  __init__.py  after_quantum_trifecta.py  agentic_mining_integration.py  ai_optimizer.py  ai_optimizer_meta.py  ai_orchestration_layer.py  apple_silicon_metal.py  async_executor.py  audit_logger.py  auditable_decision_bridge.py  autogenous_self_coding.py  autonomous_audit_persistence.py  autonomous_code_rewriter.py  autonomous_controller.py  autonomous_escalation.py  autonomous_fault_tolerant_controller.py  autonomous_mining_controller.py  autonomous_qaas_controller.py  autonomous_searching_system.py  benchmark_formalism.py  benchmark_quantum_programs.py  biological_silicon_isomorphism.py  bitcoin_header.py  blockchain_oracle.py  blockchain_structure_intelligence.py  church_lambda_calculus.py  circuit_breaker_failover.py  consciousness_engine.py  consumer_hardware_sovereignty.py  counterfactual_reflection.py  ctd_formalism.py  deutsch_constructor_theory.py  deutsch_knowledge_substrate.py  distributed_lock_manager.py  distributed_lock_manager_redis_impl.py  dodecahedral_solver.py  du_sautoy_symmetry.py  enhanced_benchmark_suite.py  (+163 more)
python_backend/pythia_self_healing/: __init__.py  autonomic_organism_governor.py  autonomous_damage_detector.py  c3_self_state_calibration.py  c4_counterfactual_self_criticism.py  c5_integrated_governance.py  complexity_gradient.py  consciousness_runtime_evidence_packet.py  dynamic_evidence_pack.py  instantiation_evidence.py  quantum_substrate_invariance.py  quantum_substrate_invariance_stress_test.py  runtime_causal_tracer.py  salamander_regenerator.py  self_healing_reactor.py  substrate_b.py
python_backend/pythia_shared/: __init__.py  pulvini_core.py
python_backend/scripts/: seed_admin_user.py
rust_core/: Cargo.toml
rust_core/src/: iit_4_gate.rs  lib.rs  simd_phi.rs
sdks/hyba-sdk-py/: .gitignore  README.md  pyproject.toml  setup.py
(+14013 files in other folders)
