[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyba-pythia-mining"
version = "1.0.0"
description = "Local deterministic replay and reproducibility tooling for HYBA/PYTHIA mining evidence"
readme = "docs/PYTHIA_REPLAY_PLAYBOOK.md"
requires-python = ">=3.12"
dependencies = [
    "hypothesis==6.155.7",
]

[project.scripts]
pythia-replay = "pythia_mining.replay_claim_cli:main"

[tool.setuptools.package-dir]
"" = "python_backend"

[tool.setuptools.packages.find]
where = ["python_backend"]
include = ["pythia_mining*"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | node_modules
  | dist
  | artifacts
  | logs
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["hyba_genesis_api", "pythia_mining", "pythia_self_healing"]
skip = [".git", ".venv", "venv", "node_modules", "dist", "artifacts", "logs"]

[tool.pytest.ini_options]
testpaths = ["tests", "additional_tests", "hyba_intelligence_tests", "hyba_quantum_scaling_benchmark_tests"]
norecursedirs = ["node_modules", "dist", "artifacts", "logs", "scripts", "python_backend", "public", "Landing_Page"]
markers = [
    "benchmark: performance/capability benchmark tests with explicit thresholds",
    "stress: stress/load tests",
    "adversarial: adversarial/autonomy abuse-case tests",
    "property: property-based invariant tests",
]
timeout = 10
